@@ -5,38 +5,47 @@
 #      Public License or the SkunkWeb License, as specified in the
 #      README file.
 #   
-#$Id: InitTags.py,v 1.2 2002/06/18 15:09:50 drew_csillag Exp $
+#$Id: InitTags.py,v 1.3 2003/05/01 20:45:58 drew_csillag Exp $
 
 import Cache
 import Executables
 import CacheTag
 import CompArgsTag
 import ReturnTag
-import DateTag
+try:
+    import mx.DateTime
+except ImportError:
+    _have_mx=0
+else:
+    _have_mx=1
+    import DateTag
+    
 import MsgCatalogTags
 import ComponentTag
 import TypeTag
 from SkunkExcept import *
-#init funcs == initTags()  initHiddenNamespace()
 
 def initTags():
-    [Cache.tagRegistry.addTag(i) for i in [
-        CacheTag.CacheTag(),
-        CompArgsTag.CompArgsTag(),
-        ReturnTag.ReturnTag(),
-        DateTag.DateTag(),
-        ComponentTag.ComponentTag(),
-        ComponentTag.DataComponentTag(),
-        ComponentTag.IncludeTag(),
-        TypeTag.TypeTag(),
-        ] + MsgCatalogTags.CatalogTags
-     ]
+    tags=[CacheTag.CacheTag(),
+          CompArgsTag.CompArgsTag(),
+          ReturnTag.ReturnTag(),
+          ComponentTag.ComponentTag(),
+          ComponentTag.DataComponentTag(),
+          ComponentTag.IncludeTag(),
+          TypeTag.TypeTag()
+          ]
+    if _have_mx:
+        tags.append(DateTag.DateTag())
+    tags.extend(MsgCatalogTags.CatalogTags)
+    for t in tags:
+        Cache.tagRegistry.addTag(t)
+    
+
 
 def initHiddenNamespace():
     ns = Executables._hidden_namespace
     for i in Cache.tagRegistry.values():
         for mod in i._modules:
-            #mod_name = string.split ( mod.__name__, '.' )[-1]
             mod_name = mod.__name__.split('.')[-1]
 
             if ns.__dict__.has_key(mod_name) and getattr(ns, mod_name) != mod:
